--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9"
     },
-    "dependencies": {}
+    "dependencies": {
+        "preact": "^10.1.0"
+    }
 }
