--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
         "allowJs": true,
         /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
-        // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+        "jsx": "react",
+        /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+        "jsxFactory": "h",
         "declaration": true,
         /* Generates corresponding '.d.ts' file. */
         "declarationDir": "types",
