--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "author": "Kumulos Ltd. <support@kumulos.com>",
     "license": "MIT",
     "devDependencies": {
+        "css-loader": "^3.4.0",
+        "node-sass": "^4.13.0",
         "prettier": "^1.18.2",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.2",
         "ts-loader": "^6.2.0",
         "typescript": "^3.7.2",
         "uglify-es": "^3.3.9",
@@ -32,5 +36,7 @@
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9"
     },
-    "dependencies": {}
+    "dependencies": {
+        "preact": "^10.1.0"
+    }
 }
