--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
         "prettier": "^1.19.1",
         "sass-loader": "^8.0.0",
         "style-loader": "^1.0.2",
+        "terser": "^5.2.1",
+        "terser-webpack-plugin": "^4.1.0",
         "ts-loader": "^6.2.0",
         "typescript": "^3.9.2",
-        "uglify-es": "^3.3.9",
-        "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9"
     },
