--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "webpack-cli": "^3.3.9"
     },
     "dependencies": {
+        "clipboard": "^2.0.8",
         "preact": "^10.5.13"
     }
 }
