--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "webpack-cli": "^3.3.9"
     },
     "dependencies": {
-        "clipboard": "^2.0.8",
+        "clipboard-copy": "^4.0.1",
         "preact": "^10.5.13"
     }
 }
