--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kumulos/web",
-    "version": "1.7.2",
+    "version": "1.8.0",
     "description": "Official SDK for integrating Kumulos services with your web projects",
     "main": "dist/index.js",
     "types": "types/src/index.d.ts",
@@ -40,6 +40,7 @@
         "webpack-cli": "^3.3.9"
     },
     "dependencies": {
+        "clipboard-copy": "^4.0.1",
         "preact": "^10.5.13"
     }
 }
