--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "build": "webpack",
         "dev": "webpack --watch",
-        "dist": "NODE_ENV=production webpack -p",
+        "dist": "NODE_ENV=production webpack",
         "snippet": "tsc -t es2015 --outFile dist/snippet.js src/web/snippet.ts && uglifyjs dist/snippet.js",
         "test": "jest"
     },
