--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kumulos/web",
-    "version": "1.10.0",
+    "version": "1.10.1",
     "description": "Official SDK for integrating Kumulos services with your web projects",
     "main": "dist/index.js",
     "types": "types/src/index.d.ts",
@@ -13,7 +13,7 @@
     "scripts": {
         "build": "webpack",
         "dev": "webpack --watch",
-        "dist": "NODE_ENV=production webpack -p",
+        "dist": "NODE_ENV=production webpack",
         "snippet": "tsc -t es2015 --outFile dist/snippet.js src/web/snippet.ts && uglifyjs dist/snippet.js",
         "test": "jest"
     },
@@ -25,22 +25,22 @@
     "license": "MIT",
     "devDependencies": {
         "@types/jest": "^26.0.14",
-        "css-loader": "^3.4.0",
+        "css-loader": "^6.2.0",
         "jest": "^26.4.2",
-        "node-sass": "^4.14.1",
+        "node-sass": "^6.0.1",
         "prettier": "^1.19.1",
-        "sass-loader": "^8.0.0",
-        "style-loader": "^1.0.2",
-        "terser": "^5.2.1",
-        "terser-webpack-plugin": "^4.1.0",
+        "sass-loader": "^12.1.0",
+        "style-loader": "^3.2.1",
+        "terser": "^5.7.2",
+        "terser-webpack-plugin": "^5.1.4",
         "ts-jest": "^26.4.0",
-        "ts-loader": "^6.2.0",
-        "typescript": "^3.9.2",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9"
+        "ts-loader": "^9.2.5",
+        "typescript": "^4.4.2",
+        "webpack": "^5.51.1",
+        "webpack-cli": "^4.8.0"
     },
     "dependencies": {
         "clipboard-copy": "^4.0.1",
-        "preact": "^10.5.13"
+        "preact": "^10.5.14"
     }
 }
