run ci when push to optimobile-web

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ optimobile-web ]
   pull_request:
-    branches: [ master ]
+    branches: [ optimobile-web ]
 
 jobs:
   build:
